# ImageAnalysis_pipeline

./: .gitignore  Dockerfile  environment.yml  for_new_environment.yml  play.ipynb  play_Fab.ipynb  pyproject.toml
notebooks/: play_ben.ipynb  rename from for old pipeline.ipynb
old_pipeline/: core.py  utility.py
pipeline/: Experiment_Classes.py  core.py  experiments.py  loading_data.py  main.py  main_Ben.py  main_Fab.py  test.py
pipeline/analysis/: Analysis_class.py  channel_data.py  data_extraction.py  extraction_core.py  imgs_loading.py  wound_mask.py
pipeline/gui/: base_gui.py  gui.py  io.py  menus.py  tab_pre_process.py  tab_test.py  tab_wound_mask.py  tabs.py
pipeline/image_extraction/: ImageExtract_Module.py  image_sequence.py  metadata.py
pipeline/image_handeling/: Base_Module_Class.py  Experiment_Classes.py  data_utility.py  loading_data.py
pipeline/mask_transformation/: compartment.py  complete_track.py  mask_morph.py  mask_warp.py  utils.py
pipeline/pre_process/: PreProcess_Class copy.py  PreProcess_Class.py  PreProcess_Class_copy.py  PreProcess_Module.py  background_sub.py  image_blur.py  image_registration.py  image_sequence copy.py  image_sequence.py  image_sequence_copy.py  main_pre_process.py  metadata.py  preprocess_utils.py
pipeline/segmentation/: Segmentation_Class.py  Segmentation_Module.py  cp_segmentation.py  cp_segmentation_copy.py  segmentation.py
pipeline/settings/: Setting_Class.py  Setting_Classes.py  pre_process.py  (+1 more)
test/: test_Experiment_Classes.py  test_image_sequence.py  test_mask_morph.py  test_metadata.py
(+60 files in other folders)
